--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3918,7 +3918,7 @@ input[type="button"].btn-block {
 }
 
 .navbar {
-  position: relative;
+  position: left;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
